<resources>
    <string name="app_name">Mad Tools</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_nanny">Elektroniczna niania</string>
    <string name="wifi_status">WiFi status</string>
    <string name="cancel_button_title">Cancel</string>
    <string name="yes_button_title">Yes</string>
    <string name="no_enabled_wifi_title">WiFi disabled</string>
    <string name="no_enabled_wifi_message">Your WiFi device is turn off.\nWould you like to enable it ?</string>
    <string name="no_enabled_gps_title">GPS wyłączone</string>
    <string name="no_enabled_gps_message">Moduł GPS jest wyłączony.\nChcesz go włączyć ?</string>
    <string name="empty"></string>
    <string name="test_title_nanny">Nanny</string>
    <string name="refresh_button">Refresh</string>
    <string name="wifi_title">WiFi</string>
    <string name="test_title_inclinometer">Kątomierz</string>
    <string name="title_activity_inclinometer">Kątomierz</string>
    <string name="title_activity_noise_meter">NoiseMeterActivity</string>
    <string name="zero_decibel">00 dB</string>
    <string name="test_title_noise">Pomiar hałasu</string>
    <string name="noise_bar_title">Poziomy hałasu</string>
    <string name="title_activity_whereiscar">Gdzie jest samochód ?</string>
    <string name="btnSaveLocation">Zapisz pozycję</string>
    <string name="btnTakeMe">Prowadź!</string>
    <string name="textView_lattitude">Szerokość:</string>
    <string name="textView_Longitude">Długość:</string>
    <string name="title_activity_locationmap">Prowadź!</string>
    <string name="title_activity_compass">Kompas</string>
    <string name="title_activity_chat_client">Klient czatu tekstowego</string>
    <string name="title_activity_chat_server">Serwer czatu tekstowego</string>
    <string name="title_activity_light_meter">Czujnik oświetlenia</string>
    <string name="light_graph_title">Poziomy oświetlenia</string>
    <string name="pomiar_pow">Pomiar Powierzchni</string>
    <string name="pomiar_odl">Pomiar odległości</string>
    <string name="opcje">Konfiguracja</string>
    <string name="end">Wyjście</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="title_activity_pom_dl">Pomiary GPS</string>
    <string name="info">Informacje</string>
    <string name="title_activity_converter">Konwerter</string>
    <string name="title_pom_gps">Pomiary GPS</string>
</resources>