<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/MadColor" >

    <Button
        android:id="@+id/btnNanny"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/black_button"
        android:text="@string/test_title_nanny"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/btnCompass"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_toLeftOf="@+id/btnNoiseMeter"
        android:background="@drawable/red_button"
        android:text="@string/title_activity_compass"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnInclinometer"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView1"
        android:layout_toRightOf="@+id/btnCompass"
        android:background="@drawable/green_button"
        android:text="@string/test_title_inclinometer"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnGpsMeasure"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnCompass"
        android:layout_toLeftOf="@+id/btnNoiseMeter"
        android:background="@drawable/black_button"
        android:text="@string/title_pom_gps"
        android:textSize="25sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnConverter"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnLightMeter"
        android:background="@drawable/green_button"
        android:text="@string/title_activity_converter"
        android:textSize="25sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnNoiseMeter"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnLightMeter"
        android:layout_toRightOf="@+id/btnConverter"
        android:background="@drawable/yellow_button"
        android:text="@string/test_title_noise"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnWhereIsCar"
        style="@style/ButtonText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnConverter"
        android:background="@drawable/black_button"
        android:text="@string/title_activity_whereiscar"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnLightMeter"
        style="@style/ButtonText"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnInclinometer"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@+id/btnGpsMeasure"
        android:background="@drawable/blue_button"
        android:text="@string/title_activity_light_meter"
        android:textSize="25sp" />

</RelativeLayout>