<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/MadColor"
    android:gravity="top" >

    <Button
        android:id="@+id/btnSaveLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="33dp"
        android:layout_marginRight="32dp"
        android:text="@string/btnSaveLocation" />

    <TextView
        android:id="@+id/textLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/textView_Longitude"
        android:textColor="@android:color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textLattitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:text="@string/textView_lattitude"
        android:textColor="@android:color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textTakeLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="30dp"
        android:text=""
        android:textColor="@android:color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textTakeLattitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="80dp"
        android:text=""
        android:textColor="@android:color/white"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnTakeMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="33dp"
        android:layout_marginLeft="32dp"
        android:text="@string/btnTakeMe"

         />

</RelativeLayout>